css/BSMpage.css
/* GENERAL AND HEADING ============================================================================================================================*/

.general-group {
  font-family: Century Gothic;
  font-size: 1vw;
  overflow: hidden;
}

.model-heading, .model-heading > pre {
  margin: 0;
  padding: 0;
}

.model-heading {
  margin: 1.5vw 0;
  text-align: center;
}

.model-heading > pre {
  font-family: Corbel;
  font-size: 1.5vw;
  /* light black */
  color: #555555;
}

/* END GENERAL AND HEADING ========================================================================================================================*/

/* CONTAINERS =====================================================================================================================================*/

#app-container, .load-text {
  text-align: center;
}

#app-container, #initial-params-container, #final-params-container, #output-container {
  background-color: transparent;
}

#app-container {
  height: 39.75vw;
  /* background-color: lightgreen; */
}

#initial-params-container {
  height: 30vw;
  /* background-color: lightblue; */
}

#initial-params-sub-container, #final-params-sub-container, .trade-leg, #output-sub-container, .osc-sub-containers {
  display: inline-block;
}

#initial-params-sub-container, #final-params-sub-container, #output-sub-container {
  /* dark grey */
  background-color: #a6a6a6;
}

#initial-params-sub-container {
  height: 17.5vw;
  width: 30vw;
  margin-top: 2.5vw;
}

#final-params-container, #output-container {
  opacity: 0;
}

#final-params-container {
  height: 38vw;
  /* background-color: lightpink; */
}

/* zero width to vertically align #trade-legs-params-container and #current-price-form */
#final-params-sub-container {
  height: 35vw;
  margin-top: 1.5vw;
}

#trade-legs-params-container {
  height: 28.5vw;
  padding-top: 1.25vw;
}

.trade-leg, .osc-sub-containers {
  /* Safari fix */
  vertical-align: middle;
}

.trade-leg {
  height: 28.5vw;
  width: 20vw;
  padding: 0 1.125vw;
}

.leg-sub-container {
  height: 2.725vw;
  margin-bottom: 0.5vw;
  background-color: #fafafa;
}

#output-container {
  /* background-color: violet; */
}

#output-sub-container {
  height: 39.5vw;
}

.osc-sub-containers {
  height: 39vw;
}

#output-sub-container-1 {
  width: 12.5vw;
}

#output-sub-container-2 {
  width: 78.25vw;
}

#output-data-tracker, .load-icon, #output-view-container {
  /* grey */
  background-color: #888888;
}

#output-data-tracker {
  display: block;
  height: 9.375vw;
  width: 11vw;
  margin: 1vw 0 0 0.75vw;
}

.load-icon, .load-text {
  /* risk-cloud blue */
  color: #9999ff;
}

.load-icon {
  height: 4vw;
  width: 6vw;
  padding-top: 2.6875vw;
}

#output-view-container, .load-text {
  height: 31vw;
}

.load-text {
  line-height: 31vw;
  font-size: 1.75vw;
}

#output-view-container, #output-summary-container {
  width: 77.5vw;
}

/* aspect ratio is 2.5:1 */
#output-view-container {
  margin-top: 1vw;
}

#output-summary-container {
  height: 6.5vw;
  margin-top: 0.625vw;
}

/* END CONTAINERS =================================================================================================================================*/

/* TABLES =========================================================================================================================================*/

#output-summary-table {
  display: inline-block;
  position: relative;
  right: 0.875vw;
  height: 6.5vw;
  width: 65.5vw;
  font-family: Arial;
  font-size: 0.65vw;
  border-spacing: 0;
}

.table-headings, .totals-group {
  height: 1vw;
}

.table-headings {
  background-color: #9999ff;
}

#trade-summary-heading {
  width: 23.5vw;
}

.price-iv-headings, .greek-headings {
  width: 6vw;
}

.summary-group, td {
  height: 0.9vw;
  text-align: center;
  background-color: #eeeeff;
  border-bottom: 1px solid #c5c5c5;
}

.totals-group {
  background-color: #d8d8d8;
  border-bottom: none;
}

.border-right-group {
  border-right: 1px solid;
}

/* END TABLES =====================================================================================================================================*/

/* ALIGNMENT HELPERS ==============================================================================================================================*/

.align-helper {
  display: inline-block;
  text-align: left;
}

.ip-align-helper, #current-price-align-helper {
  height: 1.5vw;
}

.ip-align-helper {
  width: 13.5vw;
  font-size: 0.95vw;
}

.trade-leg-align-helpers {
  width: 13vw;
}

#current-price-align-helper {
  width: 12vw;
  padding-top: 0.5vw;
  font-size: 0.95vw;
}

#output-time-align-helper {
  width: 10.5vw;
  margin-bottom: 0.5vw;
  font-size: 0.9vw;
}

/* END ALIGNMENT HELPERS ==========================================================================================================================*/

/* BUTTONS ========================================================================================================================================*/

.buttons {
  height: 1.75vw;
  margin: 0;
  padding: 0;
  margin-left: 1vw;
  border: none;
}

.params-buttons {
  width: 7vw;
  margin-right: 1vw;
}

#continue-button-1 {
  margin-top: 2vw;
}

#return-button-2 {
  width: 10vw;
  margin: 0 auto;
}

#output-time-button {
  width: 2.75vw;
  font-size: 0.9vw;
}

/* END BUTTONS ====================================================================================================================================*/

/* FORMS ==========================================================================================================================================*/

input[type=radio] {
  display: none;
}

input[type=radio] + .radio, .ip-forms, #current-price-form, .trade-leg-field-forms, .output-forms {
  display: inline-block;
}

input[type=radio] + .radio, .ip-forms, #current-price-form, .trade-leg-radio-forms, .trade-leg-field-forms, .output-forms {
  margin: 0;
}

input[type=radio] + .radio {
  height: 1vw;
  padding: 0.25vw 0 0.5vw 0;
  background-color: #d8d8d8;
}

input[type=radio]:checked + .radio {
  color: #ff5555;
}

label.radio.ip {
  margin-left: 1vw;
}

label.radio.ip.asset-type {
  width: 5.375vw;
}

label.radio.ip.contract-mult {
  width: 3.125vw;
}

label.radio.ip.num-legs {
  width: 2vw;
}

label.radio.trade-leg-radios {
  width: 6vw;
  margin: 0 1vw;
}

label.radio.output-data {
  height: 0.875vw;
  width: 9vw;
  margin: 0.25vw 0;
  padding: 0.25vw 0 0.625vw 0;
}

.ip-forms, #current-price-form, .output-forms {
  background-color: #ffffff;
}

.ip-forms {
  height: 2vw;
  width: 27vw;
  margin-top: 1vw;
  padding: 0.75vw 0.5vw 0.5vw 0.5vw;
}

.trade-leg-radio-forms {
  padding: 0.75vw 0 0.25vw 0;
}

.trade-leg-field-forms {
  height: 1.75vw;
  width: 19vw;
  padding: 0.4375vw 0 0.5vw 0;
  text-align: center;
}

#current-price-form {
  height: 2.5vw;
  margin-top: 1vw;
  padding: 0.5vw 0.75vw 0.1875vw 0.75vw;
}

.output-forms {
  width: 11vw;
  padding: 0.75vw 0 0.5vw 0;
}

#output-data-form {
  margin: 1vw 0;
}

#output-time-form {
  position: relative;
  bottom: 42.5%;
  /* Safari and Chrome fixes */
  vertical-align: middle;
  height: 4.125vw;
  margin-bottom: 0.375vw;
  padding-top: 0.875vw;
}

/* END FORMS ======================================================================================================================================*/

/* FIELDS =========================================================================================================================================*/

.all-fields {
  display: inline-block;
  margin: 0;
  padding: 0.125vw;
  font-size: 0.9vw;
  text-align: center;
  background-color: #ddffdd;
  border: 1px solid #ddffdd;
}

.small-fields, #current-price-field, #output-time-field {
  padding-left: 0.5vw;
}

.small-fields, #output-time-field {
  height: 1.5vw;
  width: 4vw;
}

#current-price-field {
  height: 1.75vw;
  width: 5vw;
}

/* END FIELDS =====================================================================================================================================*/

